# terminal-journal

./: .gitignore  README.md  pyproject.toml
terminal_journal/: __init__.py  cli.py
tests/: test_cli.py
